--- a/src/styles/blocks/_feedback-section.scss
+++ b/src/styles/blocks/_feedback-section.scss
@@ -5,6 +5,7 @@
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
+  background-attachment: fixed;
 }
 
 .feedback-slider-wrapper {
