--- a/src/styles/blocks/_packages-section.scss
+++ b/src/styles/blocks/_packages-section.scss
@@ -5,6 +5,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+  background-attachment: fixed;
   .simple-text-block {
     text-align: center;
     .section-title {
