--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -241,17 +241,17 @@ body.home {
     display: none;
   }
   .logo-wrapper {
-    background: rgba(255, 255, 255, 0.25);
+    background: transparent;
     position: relative;
     &:after {
-      position: absolute;
-      content: '';
-      display: block;
-      height: 100%;
-      width: 100%;
-      top: 0;
-      left: 0;
-      box-shadow: 0px 0px 48px 48px rgba(255, 255, 255, 0.25);
+      // position: absolute;
+      // content: '';
+      // display: block;
+      // height: 100%;
+      // width: 100%;
+      // top: 0;
+      // left: 0;
+      // box-shadow: 0px 0px 48px 48px rgba(255, 255, 255, 0.25);
     }
     a {
       display: block;
