fixed sticky nav logo

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -259,7 +259,7 @@ body.home {
       z-index: 9;
       .logo {
         max-width: 100%;
-        display: block;
+        display: none;
         height: auto;
       }
     }
