--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -5,8 +5,9 @@
 .video-container {
   position: relative;
   overflow: hidden;
-  max-height: 100vh;
+  max-height: 70vh;
   background-color: black;
+  min-height: 515px;
   video {
     opacity: 0.5;
     height: auto;
@@ -16,7 +17,7 @@
   .overlay-desc {
     background: rgba(0,0,0,0);
     position: absolute;
-    top: 0; right: 0; bottom: 0; left: 0;
+    top: 25%; right: 0; bottom: 0; left: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,7 +26,7 @@
 
 .hero-banner-wrapper {
   position: relative;
-  min-height: 740px;
+  // min-height: 740px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -124,7 +125,20 @@
 }
 
 /*----------------Media Queries---------------------------*/
-@media screen and (max-width: 768px) {
+@media (max-width:1200px) and (min-width:855px) {
+  .overlay-desc {
+    top: 15% !important;
+    .hero-banner-wrapper {
+      .banner-content-wrapper {
+        .banner-button-container {
+          margin-top: 25px;
+        }
+      } 
+    } 
+  }
+}
+
+@media screen and (max-width: 855px) {
   .mobile-banner {
     display: block;
     background-color: black;
