--- a/src/styles/blocks/_feedback-section.scss
+++ b/src/styles/blocks/_feedback-section.scss
@@ -1,11 +1,16 @@
 /*-------------------------Feedback section------------------------------*/
 
 .feedback-section {
-  padding: 80px 0 55px;
+  // padding: 80px 0 55px;
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
   background-attachment: fixed;
+  position: relative;
+  .feedback-wrapper {
+    padding: 80px 0 55px;
+    background-color: rgba(201, 57, 49, 0.6);
+  }
 }
 
 .feedback-slider-wrapper {
