--- a/src/styles/blocks/_packages-section.scss
+++ b/src/styles/blocks/_packages-section.scss
@@ -1,13 +1,16 @@
 /*-----------------------Packages section------------------------------------*/
 .packages-section {
-  padding: 60px 0;
   background-position: center center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   background-attachment: fixed;
+  .packages-wrapper {
+    background-color: rgba(0, 87, 94, 0.6);
+  }
   .simple-text-block {
     text-align: center;
+    padding-top: 60px;
     .section-title {
       margin-bottom: 30px;
     }
