--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -6,6 +6,12 @@ body {
   font-weight: 400;
   font-size: 18px;
   color: $body-text-color;
+  p {
+    font-family: 'Roboto', sans-serif;
+  }
+  li {
+    font-family: 'Roboto', sans-serif;
+  }
 }
 
 html,
